recruiter-app/main/default/objects/JobAdvServiceCredentials__c/JobAdvServiceCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JobAdvServiceCredentials</label>
</CustomObject>