recruiter-app/main/default/objects/JobAdvServiceCredentials__c/fields/BaseUri__c.field-meta.xml
<CustomField>
    <fullName>BaseUri__c</fullName>
    <label>BaseUri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>