recruiter-app/main/default/objects/JobAdvServiceCredentials__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>GrantType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>