recruiter-app/main/default/objects/JobAdvServiceCredentials__c/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <label>SecurityToken</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>